--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "generate": "node ./server/generateData.js > ./server/database.json",
+    "server": "json-server --watch ./server/database.json"
   },
   "private": true,
   "dependencies": {
@@ -23,6 +25,8 @@
     "@angular/router": "~8.2.8",
     "@netlify-builder/deploy": "^2.0.3",
     "hammerjs": "^2.0.8",
+    "json-server": "^0.15.1",
+    "node-fetch": "^2.6.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
